stream 2 progress, bugs included

--- a/PypiAng/testapp/src/app/app.component.html
+++ b/PypiAng/testapp/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-hero></app-hero>
-<app-messages></app-messages>
+<h2>{{title}}</h2>
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/heroes">Click here to get scammed</a>
+</nav>
+<router-outlet></router-outlet>
+<!-- <app-messages></app-messages> -->
